<resources>
    <string name="app_name">MyMusic</string>

    <!--navigation drawer-->
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_favorite">Favourite</string>
    <string name="nav_drawer_item_offline">Offline</string>
    <string name="nav_drawer_item_communicate">Communicate</string>
    <string name="nav_drawer_item_about">About</string>
    <string name="nav_drawer_item_rate">Rate</string>
    <string name="music">Music</string>
    <string name="string_text_hint_search">Search...</string>
    <string name="string_action_dowload">Download</string>
    <string name="string_title_home">Home</string>
    <string name="string_title_add_favorite">Add favorite</string>
    <string name="string_action_remove_favorite">Remove Favorite</string>
    <string name="string_title_remove_favorite">Remove Favorite</string>
    <string name="string_no_data_favorite">No data favorite!!!</string>
    <string name="string_duration_start">00:00</string>
    <string name="string_title_rate">Do you rate this app</string>
    <string name="string_message_rate">You like rating app  \n Please write a comment and rating</string>
    <string name="string_btn_rate">Rate</string>
    <string name="string_btn_rate_later">Later</string>
    <string name="string_btn_no_thanks">No thanks</string>
    <string name="string_about">About</string>
    <string name="string_message_about">Tranner : DoanVanToan \nTranee : DinhVanLap</string>
    <string name="string_is_downloadable">Not is downloadable !</string>
    <string name="string_permisison_granted">Permission already granted.</string>
    <string name="string_btn_ok">OK</string>
    <string name="string_btn_cancle">Cancel</string>
    <string name="string_message_access_permission">You need to allow access to both the permissions</string>
    <string name="string_download_completed">Download completed</string>
    <string name="string_download_succes">Download success</string>
    <string name="string_download_false">Download false</string>
    <string name="string_title_sorry">We\'re sorry…</string>
    <string name="string_title_message_feature">This function will be updated in the next version</string>

</resources>
