<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sub_home"
            android:icon="@drawable/ic_item_nav_home"
            android:title="@string/nav_drawer_item_home" />
        <item
            android:id="@+id/nav_sub_favorite"
            android:icon="@drawable/ic_item_nav_favorite"
            android:title="@string/nav_drawer_item_favorite" />
        <item
            android:id="@+id/nav_sub_music_offline"
            android:icon="@drawable/ic_item_nav_music"
            android:title="@string/nav_drawer_item_offline" />
    </group>

    <item android:title="@string/nav_drawer_item_communicate">
        <menu>
            <item
                android:id="@+id/nav_sub_about"
                android:icon="@drawable/ic_item_nav_about"
                android:title="@string/nav_drawer_item_about" />
            <item
                android:id="@+id/nav_sub_rate"
                android:icon="@drawable/ic_item_nav_rate"
                android:title="@string/nav_drawer_item_rate" />
        </menu>
    </item>
</menu>
